--- a/ios/casionTimes1/Info.plist
+++ b/ios/casionTimes1/Info.plist
@@ -60,6 +60,7 @@
 		<string>Inter-Regular.ttf</string>
 		<string>PTSerif-BoldItalic.ttf</string>
 		<string>PTSerif-Italic.ttf</string>
+		<string>PTSerif-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
